public/css/main.css
/* RESETS */
*,
*:before,
*:after {
  margin: 0;
  padding: 0;
}

/* GLOBALS */
:root {
  --white: #ffffff;
  --haze: #efeff2;
  --murk: #dedee2;
  --gloom: #76767d;
  --dark: #222225;
}

html {
  box-sizing: border-box;
  font-size: 18px;
}

/* STRUCTURE */
body {
  align-content: start;
  background: var(--white);
  color: var(--dark);
  display: grid;
  font-family: 'source-code-pro', monospace;
  justify-content: center;
  grid-template-columns: repeat(8, 1fr);
  grid-template-rows: auto auto 1fr;
  min-height: 100vh;
  overflow-x: hidden;
}

header {
  align-content: flex-end;
  align-self: start;
  display: flex;
  grid-column: 3 / 7;
  justify-content: space-between;
  padding: 1rem;
  width: calc(100% - 2rem);

  & h1 {
    margin: 0.5rem 0 0 0;
    transform: rotate(-2deg);

    & a {
      margin: 0;

      &:link,
      &:visited {
        border: none;
      }
    }
  }

  & nav {
    align-self: center;
    display: flex;

    & ul {
      &.menu {
        list-style: none;
        margin: 0;

        & li {
          display: inline;
        }
      }
    }
  }
}

.sr-only {
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute;
  width: 1px;
}

main {
  grid-column: 3 / 7;
  justify-self: left;
  margin: 1rem;
  width: calc(100% - 2rem);
}

footer {
  align-self: end;
  display: grid;
  font-size: 0.8rem;
  grid-column: 1 / 9;
  justify-items: center;
  min-height: 2rem;
  margin: 3rem 0 1rem 0;

  & p {
    margin: 0;
  }
}

/* TYPOGRAPHY */
h1 {
  font-size: 2.5rem;
}
h2 {
  font-size: 2rem
}
h3 {
  font-size: 1.6rem;
}

h1,
h2,
h3,
h4 {
  font-family: 'source-code-pro', monospace;
  font-weight: 600;
  margin: 2rem 0 1rem 0;

  & a {
    background: var(--dark);
    border: none;
    color: var(--white);

    &:active,
    &:hover {
      background: var(--haze);
      color: var(--dark);
    }
  }
}

p {
  line-height: 2rem;
  margin: 1rem 0 0 0;
  text-wrap: pretty;

  &.caption {
    font-size: 0.8rem;
    line-height: 1rem;
    margin: -0.5rem 0 1.5rem 0;

    &.small {
      max-width: 200px;
      width: 50%;
    }

    &.medium {
      max-width: 400px;
      width: 100%;
    }

    &.large {
      width: 100%;
    }

    &.center {
      display: block;
      margin-left: auto;
      margin-right: auto;
    }
  }
}

.strike {
  text-decoration: line-through;
}

ul, ol {
  list-style-position: inside;
  margin: 0 0 0 2rem;

  &.wider {
    margin: 2rem 0;

    & li {
      margin: 1rem 0;

      & p {
        line-height: 1.6rem;
        margin: 1rem 0 0.5rem 1.6rem;
        padding: 0;
      }
    }
  }

  & li {
    line-height: 2rem;
    margin: 0.5rem 0 0 0;

    &.flat {
      margin: 0.5rem 0 0 -2rem;
    }
  }
}

.right {
  display: block;
  text-align: right;
}

.pagination {
  margin: 2rem 0 0 0;
}

.inactive {
  color: var(--gloom);
  cursor: pointer;
  padding: 0.2rem 0.4rem;
}

.dates {
  font-size: 0.8rem;
  font-style: italic;
}

.title {
  font-weight: 600;
  font-size: 1rem;
  margin: 0;
}

i {
  font-family: 'source-code-pro', monospace;
  font-style: italic;
  white-space: nowrap;
}

strong {
  font-family: 'source-code-pro', monospace;
  font-weight: 600;
  font-size: 1.2rem;
}

.nobr {
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

.callout {
  outline: 1px dashed var(--dark);
  padding: 1rem;
}

.heading-and {
  align-items: center;
  display: flex;
  justify-content: space-between;
  margin: 0;
  padding: 0;
}

blockquote {
  font-style: italic;
  margin: 0 4rem -2rem 4rem;
  padding: 0;

  & .byline {
    float: right;
    font-style: normal;
    text-align: right;

    &::before {
      content: '~ ';
    }
  }

  &::before {
    background: url('/images/quote.svg') bottom left / 2rem no-repeat;
    content: '';
    display: inline-flex;
    filter: invert(100%) sepia(9%) saturate(822%) hue-rotate(180deg) brightness(92%) contrast(91%);
    margin: 0 0 -2rem -2.6rem;
    height: 2rem;
    width: 2rem;
  }
  
  &::after {
    background: url('/images/quote.svg') bottom left / 2rem no-repeat;
    transform: rotate(180deg);
    content: '';
    display: inline-flex;
    filter: invert(100%) sepia(9%) saturate(822%) hue-rotate(180deg) brightness(92%) contrast(91%);
    margin: 0 0 2rem 2.6rem;
    height: 2rem;
    width: 100%;
  }
}

code {
  background-color: var(--haze);
  box-decoration-break: clone;
  font-family: 'source-code-pro', monospace;
  margin: 0;
  padding: 0 0.4rem;
  -webkit-box-decoration-break: clone;
}

pre {
  background-color: var(--haze);
  font-family: 'source-code-pro', monospace;
  margin: 1rem 0;
  padding: 2rem;
  text-wrap: wrap;
  
  & code {
    background: transparent;
    padding: 0;
  }
}

hr {
  border: none;
  color: var(--gloom);
  
  &::before {
    content: '* * *';
    display: block;
    margin: 1rem 0 0 0;
    text-align: center;
  }
}


sup, sub {
  line-height: 1rem;
}

/* LINKS */
a {
  border-bottom: 1px dashed var(--dark);
  box-decoration-break: clone;
  color: var(--dark);
  padding: 0 0.4rem;
  text-decoration: none;
  -webkit-box-decoration-break: clone;

  &:focus {
    border: none;
    outline: 1px dashed var(--dark);
  }

  &:active,
  &:hover {
    background-color: var(--dark);
    border-bottom: none;
    color: white;
    outline: none;
    transition: 200ms;
  }

  &.feature {
    align-items: center;
    background-color: var(--dark);
    border: none;
    color: white;
    display: flex;
    min-height: 100px;
    padding: 1rem;
    width: calc(100% - 2rem);

    &:focus {
      border: none;
      outline: 1px dashed var(--dark);
    }
  
    &:active,
    &:hover {
      background: var(--haze);
      color: var(--dark);
    }

    & .title {
      font-size: 1.6rem;
      margin: 0 1rem 0 0;
    }
  }

  &.selected {
    border: none;
    outline: 1px dashed var(--dark);
  }

  &:active code,
  &:hover code {
    background-color: var(--gloom);
    color: #ffffff;
    transition: 200ms;
  }

  &[href^='http'],
  &[href^='https'] {
    &::after {
      background: url('/images/external.svg') bottom right / 0.5rem no-repeat;
      content: '';
      display: inline-block;
      filter: invert(49%) sepia(10%) saturate(207%) hue-rotate(202deg) brightness(92%) contrast(88%);
      height: 1rem;
      width: 1rem;
    }
    
    &:active,
    &:hover {
      &::after {
        filter: invert(96%) sepia(9%) saturate(64%) hue-rotate(202deg) brightness(92%) contrast(94%);
      }
    }
  }
  
  &.rss {
    &::after {
      background: url('/images/rss.svg') bottom right / 0.6rem no-repeat;
      content: '';
      display: inline-block;
      filter: invert(7%) sepia(4%) saturate(1514%) hue-rotate(201deg) brightness(93%) contrast(84%);
      height: 1rem;
      margin: 0;
      padding: 0;
      width: 0.8rem;
    }
    
    &:active,
    &:hover {
      &::after {
        filter: invert(96%) sepia(9%) saturate(64%) hue-rotate(202deg) brightness(92%) contrast(94%);
      }
    }
  }
}

.code-copy {
  position: absolute;
  background: none;
  border: none;
  border-radius: 0;
  cursor: pointer;
  height: 1.4rem;
  padding: 3px 0 0 0;
  right: 6px;
  top: 6px;
  width: 1.4rem;

  & span {
    filter: invert(7%) sepia(4%) saturate(1514%) hue-rotate(201deg) brightness(93%) contrast(84%);
  }

  &:active,
  &:hover {
    background: var(--dark);
    & span {
      filter: invert(96%) sepia(9%) saturate(64%) hue-rotate(202deg) brightness(92%) contrast(94%);
    }
  }

  &:focus {
    border: none;
    outline: 1px dashed var(--dark);
  }
}

img {
  margin: 1rem 0;

  &.icon {
    margin: 0 0.3rem -0.2rem 0.2rem;
    width: 1rem;
  }


  &.left {
    float: left;
    margin: 1rem 1rem 1rem 0;
  }

  &.right {
    float: right;
    margin: 1rem 0 1rem 1rem;
  }

  &.small {
    max-width: 200px;
    width: 50%;
  }

  &.medium {
    max-width: 400px;
    width: 100%;
  }

  &.large {
    width: 100%;
  }

  &.center {
    display: block;
    margin: 2rem auto 1rem auto;
  }

  &.circle {
    border-radius: 100%;
    shape-outside: circle();
  }
}

.video-container {
  height: 0;
  margin: 2rem 0;
  max-width: 100%;
  position: relative;
  padding-bottom: 56.25%;
  overflow: hidden;

  & iframe,
  & object,
  & embed {
    height: 100%;
    left: 0;
    position: absolute;
    top: 0;
    width: 100%;
  }
}

@media screen and (max-width: 1420px) {
  header {
    grid-column: 2 / 8;
  }

  main {
    grid-column: 2 / 8;
    min-height: calc(100vh - 18rem);
    width: calc(100% - 2rem);
  }
}

@media screen and (max-width: 1000px) {
  header {
    flex-direction: column;
    grid-column: 2 / 8;
    

    & h1 {
      margin: 0 0 1rem 0;
    }

    & nav {
      align-self: flex-start;
      font-size: 0.8rem;
    }
  }

  main {
    grid-column: 2 / 8;
    min-height: calc(100vh - 18rem);
    width: calc(100% - 2rem);
  }
}

@media screen and (max-width: 480px) {

  header,
  main {
    grid-column: 1 / 9;
  }

  h1 {
    font-size: clamp(2.5rem, 5vw, 3rem);
  }
}

